--- a/netishr/job_description.html
+++ b/netishr/job_description.html
@@ -431,7 +431,7 @@
                                             <li class=""><a data-toggle="tab" href="#main_responsibility">Main Responsibility</a></li>
                                             <li class=""><a data-toggle="tab" href="#working_relationship">Working Relationship</a></li>
                                             <li class=""><a data-toggle="tab" href="#job_specification">Job Specification</a></li>
-                                            <li class=""><a data-toggle="tab" href="#role_responsibility">Managerial/Fucntional Responsibility</a></li>
+                                            <li class=""><a data-toggle="tab" href="#role_responsibility">Managerial/Functional Responsibility</a></li>
                                             <li class=""><a data-toggle="tab" href="#enforcement">Enforcement</a></li>
                                         </ul>
                                         <div class="tab-content tab_jobdesc">
@@ -1469,13 +1469,10 @@
                                                                 Role : Structural
                                                             </label>
                                                             <br />
-                                                            <label class="control-label">
-                                                                Role Band :
-                                                            </label>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-4 text-right">
-                                                        <a href="job_roles.html" class="btn btn-primary btn-sm netis_add">Add New</a>
+                                                        <a href="job_roles.html" class="btn btn-primary btn-sm netis_add">Go to Configuration Page</a>
                                                     </div>
                                                     <div class="col-lg-12">
                                                         <div class="table-responsive">
@@ -1484,32 +1481,22 @@
                                                                     <tr>
                                                                         <th>No</th>
                                                                         <th>Responsibility</th>
-                                                                        <th>Action</th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
                                                                     <tr class="gradeX">
                                                                         <td>1.</td>
                                                                         <td>Responsibility 1</td>
-                                                                        <td>
-                                                                            <button class="btn btn-default btn-xs">Edit</button>
-                                                                            <button class="btn btn-default btn-xs">Delete</button>
-                                                                        </td>
                                                                     </tr>
                                                                     <tr class="gradeC">
                                                                         <td>2.</td>
                                                                         <td>Responsibility 2</td>
-                                                                        <td>
-                                                                            <button class="btn btn-default btn-xs">Edit</button>
-                                                                            <button class="btn btn-default btn-xs">Delete</button>
-                                                                        </td>
                                                                     </tr>
                                                                 </tbody>
                                                                 <tfoot>
                                                                     <tr>
                                                                         <th>No</th>
                                                                         <th>Responsibility</th>
-                                                                        <th>Action</th>
                                                                     </tr>
                                                                 </tfoot>
                                                             </table>
