--- a/netishr/persons.html
+++ b/netishr/persons.html
@@ -406,7 +406,7 @@
                                 </span>
                                 </div>
                                 <br>
-                                <button type="button" class="btn btn-primary btn-xs">New Person</button>
+                                <a href="persons_profile.html"><button type="button" class="btn btn-primary btn-xs">New Person</button></a>
                                 <div class="clients-list">
                                     <ul class="nav nav-tabs">
                                         <span class="pull-right small text-muted">16 persons</span>
@@ -449,9 +449,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -466,9 +463,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -483,9 +477,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -500,9 +491,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -517,9 +505,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -534,9 +519,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -551,9 +533,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -568,9 +547,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -585,9 +561,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -602,9 +575,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -619,9 +589,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -636,9 +603,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -653,9 +617,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -670,9 +631,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -716,9 +674,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -733,9 +688,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -750,9 +702,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -767,9 +716,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -784,9 +730,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -801,9 +744,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -818,9 +758,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -835,9 +772,6 @@
                                                                         <a href="persons_profile.html">
                                                                             <button class="btn-white btn btn-xs">Detail</button>
                                                                         </a>
-                                                                        <a>
-                                                                            <button class="btn-white btn btn-xs">Delete</button>
-                                                                            <a>
                                                                     </div>
                                                                 </td>
                                                             </tr>
