--- a/netishr/job_roles.html
+++ b/netishr/job_roles.html
@@ -404,7 +404,7 @@
                         <ul class="nav nav-tabs">
                             <li class="active"><a data-toggle="tab" href="#tab-1"> Job Roles</a></li>
                             <li class=""><a data-toggle="tab" href="#tab-2">Job Role Bands</a></li>
-                            <li class=""><a data-toggle="tab" href="#tab-3">Managerial/Fucntional Responsibility</a></li>
+                            <li class=""><a data-toggle="tab" href="#tab-3">Managerial/Functional Responsibility</a></li>
                         </ul>
                         <div class="tab-content">
                             <div id="tab-1" class="tab-pane active">
