Initial commit for pay items and pay item assignmentUpdated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -549,8 +549,14 @@
                                         <div><a href="administrator_remuneration_settings.html">Settings</a>
                                             <div class="small">Various settings for Performance</div>
                                         </div>
-                                        Personnel Administration
-                                        <br> Payroll
+                                        <p></p>
+                                        <div><a href="payroll_payitems.html">Pay Items</a>
+                                            <div class="small">Pay Items</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="payroll_payitemassignment.html">Pay Item Assignment</a>
+                                            <div class="small">Pay Item Assignment</div>
+                                        </div>
                                     </div>
 
                                 </div>
