--- a/netishr/payroll_payitemassignment.html
+++ b/netishr/payroll_payitemassignment.html
@@ -403,10 +403,10 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a>Remuneration</a>
+                                    <a href="administrator.html">Administration</a>
                                 </li>
                                 <li>
-                                    <a>Payroll</a>
+                                    <a>Remuneration</a>
                                 </li>
                                 <li class="active">
                                     <strong>Pay Item Assignment</strong>
