--- a/netishr/payroll_payslipitems.html
+++ b/netishr/payroll_payslipitems.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR | Pay Items </title>
+    <title>NetisHR | Payslip Items </title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -397,7 +397,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Pay Items</h2>
+                            <h2>Payslip Items</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
@@ -409,7 +409,7 @@
                                     <a>Remuneration</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Pay Items</strong>
+                                    <strong>Payslip Items</strong>
                                 </li>
                             </ol>
                         </div>
@@ -441,7 +441,7 @@
                                                     <div class="panel-body">
 
 
-                                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Create new pay item</button>
+                                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Create new payslip item</button>
                                                         <div class="modal" id="newjoblevel">
                                                             <div class="modal-dialog">
                                                                 <div class="modal-content animated">
@@ -532,32 +532,22 @@
                                                                             <tr>
                                                                                 <th data-toggle="true">Code</th>
                                                                                 <th data-toggle="true">Name</th>
-                                                                                <th data-toggle="true">Pay Item Type</th>
-                                                                                <th data-toggle="true">Pay Component Type</th>
-                                                                                <th data-hide="all">Description Value</th>
-                                                                                <th data-hide="all">Reference Value</th>
-                                                                                <th data-hide="all">Percentage Value</th>
-                                                                                <th data-hide="all">Specific Value</th>
-                                                                                <th data-hide="all">Max Multiplication Value</th>
-                                                                                <th data-hide="all">Payroll Setting Name</th>
-                                                                                <th data-hide="all">Cutoff Date</th>
+                                                                                <th data-toggle="true">Payslip Item Type</th>
+                                                                                <th data-hide="all">Description</th>
+                                                                                <th data-hide="all">Pay item(s)</th>
                                                                                 <th></th>
 
                                                                             </tr>
                                                                         </thead>
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td>BS_W</td>
-                                                                                <td>Basic Salary</td>
-                                                                                <td>Wages</td>
-                                                                                <td>Basic Salary</td>
-                                                                                <td>General</td>
-                                                                                <td>Manual Entry</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>None</td>
-                                                                                <td>None</td>
+                                                                                <td>GP_I</td>
+                                                                                <td>Gaji Pokok</td>
+                                                                                <td>Income</td>
+                                                                                <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
+                                                                                <td>
+                                                                                    BS_W - Basic Salary, TLK_A - Tunjangan Luar Kota, L_A - Lembur, TKH_A - Tunjangan Kemahalan
+                                                                                </td>
                                                                                 <td>
                                                                                     <td class="text-right">
                                                                                         <div class="btn-group">
@@ -571,17 +561,14 @@
                                                                                 </td>
                                                                             </tr>
                                                                             <tr>
-                                                                                <td>THR_A</td>
-                                                                                <td>THR</td>
-                                                                                <td>Allowances</td>
-                                                                                <td>Tantiem, Bonus, THR</td>
-                                                                                <td>General</td>
-                                                                                <td>Manual Entry</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>None</td>
-                                                                                <td>None</td>
+                                                                                <td>TKOM_I</td>
+                                                                                <td>Tunjangan Komunikasi</td>
+                                                                                <td>Income</td>
+                                                                                <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
+                                                                                <td>
+
+                                                                                    BS_W - Basic Salary, THDR_A - Tunjangan Kehadiran, L_A - Lembur, TL_A - Tunjangan Lembur
+                                                                                </td>
                                                                                 <td>
                                                                                     <td class="text-right">
                                                                                         <div class="btn-group">
@@ -623,36 +610,26 @@
                                                                             <tr>
                                                                                 <th data-toggle="true">Code</th>
                                                                                 <th data-toggle="true">Name</th>
-                                                                                <th data-toggle="true">Pay Item Type</th>
-                                                                                <th data-toggle="true">Pay Component Type</th>
-                                                                                <th data-hide="all">Description Value</th>
-                                                                                <th data-hide="all">Reference Value</th>
-                                                                                <th data-hide="all">Percentage Value</th>
-                                                                                <th data-hide="all">Specific Value</th>
-                                                                                <th data-hide="all">Max Multiplication Value</th>
-                                                                                <th data-hide="all">Payroll Setting Name</th>
-                                                                                <th data-hide="all">Cutoff Date</th>
+                                                                                <th data-toggle="true">Payslip Item Type</th>
+                                                                                <th data-hide="all">Description</th>
+                                                                                <th data-hide="all">Pay item(s)</th>
                                                                                 <th></th>
 
                                                                             </tr>
                                                                         </thead>
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td>BS_W</td>
-                                                                                <td>Basic Salary</td>
-                                                                                <td>Wages</td>
-                                                                                <td>Basic Salary</td>
-                                                                                <td>General</td>
-                                                                                <td>Manual Entry</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>None</td>
-                                                                                <td>None</td>
+                                                                                <td>GP_I</td>
+                                                                                <td>Gaji Pokok</td>
+                                                                                <td>Income</td>
+                                                                                <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
+                                                                                <td>
+                                                                                    BS_W - Basic Salary, L_A - Lembur, TL_A - Tunjangan Lembur
+                                                                                </td>
                                                                                 <td>
                                                                                     <td class="text-right">
                                                                                         <div class="btn-group">
-                                                                                            <button class="btn-white btn btn-xs">Unarchive</button>
+                                                                                            <button class="btn-white btn btn-xs">Archive</button>
                                                                                         </div>
                                                                                         <div class="btn-group">
                                                                                             <button class="btn-white btn btn-xs">Delete</button>
@@ -662,21 +639,17 @@
                                                                                 </td>
                                                                             </tr>
                                                                             <tr>
-                                                                                <td>THR_A</td>
-                                                                                <td>THR</td>
-                                                                                <td>Allowances</td>
-                                                                                <td>Tantiem, Bonus, THR</td>
-                                                                                <td>General</td>
-                                                                                <td>Manual Entry</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>0.00</td>
-                                                                                <td>None</td>
-                                                                                <td>None</td>
+                                                                                <td>TKOM_I</td>
+                                                                                <td>Tunjangan Komunikasi</td>
+                                                                                <td>Income</td>
+                                                                                <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
+                                                                                <td>
+                                                                                    BS_W - Basic Salary, THDR_A - Tunjangan Kehadiran, L_A - Lembur, TL_A - Tunjangan Lembur
+                                                                                </td>
                                                                                 <td>
                                                                                     <td class="text-right">
                                                                                         <div class="btn-group">
-                                                                                            <button class="btn-white btn btn-xs">Unarchive</button>
+                                                                                            <button class="btn-white btn btn-xs">Archive</button>
                                                                                         </div>
 
                                                                                         <div class="btn-group">
